--- a/index.html
+++ b/index.html
@@ -4,91 +4,33 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Ludus Mentis - Académie éducative par le jeu vidéo</title>
-  <style>
-    body { font-family: sans-serif; margin: 0; padding: 0; line-height: 1.6; background-color: #fefefe; color: #2a2a2a; }
-    header { background-color: #001F3F; color: white; padding: 40px 20px; text-align: center; }
-    header h1 { margin: 0; }
-    nav { background: #f4f4f4; padding: 10px; text-align: center; }
-    nav a { margin: 0 10px; text-decoration: none; color: #001F3F; font-weight: bold; }
-    section { padding: 30px 20px; max-width: 960px; margin: auto; }
-    h2 { color: #001F3F; }
-    footer { background: #001F3F; color: white; text-align: center; padding: 20px; font-size: 0.9em; }
-    .cta-button {
-      display: inline-block;
-      padding: 10px 20px;
-      background-color: #0074D9;
-      color: white;
-      text-decoration: none;
-      margin-top: 20px;
-      border-radius: 5px;
-    }
-  </style>
+  <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
+  <header>
+    <h1>Ludus Mentis</h1>
+    <p>« Apprendre, coopérer, grandir : les soft skills du futur par le jeu vidéo. »</p>
+    <nav>
+      <a href="index.html">Accueil</a>
+      <a href="a-propos.html">À propos</a>
+      <a href="programmes.html">Programmes</a>
+      <a href="temoignages.html">Témoignages</a>
+      <a href="inscription.html">Inscription</a>
+      <a href="blog.html">Blog</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
 
-<header>
-  <h1>Ludus Mentis</h1>
-  <p>Apprendre, coopérer et grandir à travers le jeu vidéo</p>
-</header>
+  <main>
+    <section>
+      <h2>Présentation</h2>
+      <p>Ludus Mentis est une académie innovante née à Walhain, visant à renforcer les compétences psychosociales des jeunes à travers le jeu vidéo coopératif, selon une méthodologie validée scientifiquement (MEGASKILLS).</p>
+      <a href="programmes.html">Découvrir nos programmes</a>
+    </section>
+  </main>
 
-<nav>
-  <a href="#apropos">À propos</a>
-  <a href="#academie">L'académie</a>
-  <a href="#pedagogie">Méthode</a>
-  <a href="#partenaires">Partenaires</a>
-  <a href="#contact">Contact</a>
-</nav>
-
-<section id="apropos">
-  <h2>À propos</h2>
-  <p>Ludus Mentis est une académie éducative née à Walhain qui aide les jeunes à développer leurs compétences psychosociales à travers une pratique encadrée et innovante des jeux vidéo coopératifs.</p>
-  <p>Notre objectif est de transformer une passion en levier éducatif, structurant et épanouissant.</p>
-</section>
-
-<section id="academie">
-  <h2>Académie 2026</h2>
-  <p>Dès janvier 2026, Ludus Mentis proposera un cursus annuel pour les jeunes de 10 à 15 ans, autour de 4 modules thématiques :</p>
-  <ul>
-    <li>Communication & écoute active</li>
-    <li>Coopération & esprit d’équipe</li>
-    <li>Gestion du stress & résilience</li>
-    <li>Confiance en soi & valorisation</li>
-  </ul>
-  <p>Chaque module comprend 7 séances de 2 heures alliant jeux vidéo coopératifs, débriefings et activités collectives.</p>
-</section>
-
-<section id="pedagogie">
-  <h2>Méthode pédagogique</h2>
-  <p>Notre approche repose sur :</p>
-  <ul>
-    <li>Le cycle de Kolb : expérience → réflexion → conceptualisation → réutilisation</li>
-    <li>Le modèle SAFE : Séquencé, Actif, Focalisé, Explicite</li>
-    <li>Des jeux coopératifs sur Nintendo Switch : Overcooked 2, Moving Out, Spaceteam, etc.</li>
-    <li>Des activités physiques (exergaming) et pauses actives</li>
-  </ul>
-</section>
-
-<section id="partenaires">
-  <h2>Partenaires & soutien</h2>
-  <p>Projet soutenu par :</p>
-  <ul>
-    <li>La Commune de Walhain</li>
-    <li>La Belgian Esports Federation</li>
-    <li>Des acteurs du numérique éducatif</li>
-  </ul>
-</section>
-
-<section id="contact">
-  <h2>Contact</h2>
-  <p>Intéressé(e) ? Envie d’en savoir plus ou de vous impliquer ?</p>
-  <p>Email : <a href="mailto:ludus.mentis.esport@gmail.com">ludus.mentis.esport@gmail.com</a></p>
-  <p>Téléphone : 0474/25.40.37</p>
-  <a href="mailto:ludus.mentis.esport@gmail.com" class="cta-button">Contactez-nous</a>
-</section>
-
-<footer>
-  © 2025 Ludus Mentis · Tous droits réservés
-</footer>
-
+  <footer>
+    <p>© 2026 Ludus Mentis | <a href="mentions.html">Mentions légales</a></p>
+  </footer>
 </body>
 </html>
