--- a/a-propos.html
+++ b/a-propos.html
@@ -15,7 +15,7 @@
       <h2>Vision & Histoire</h2>
       <p>Ludus Mentis répond au besoin de structurer positivement la pratique vidéoludique des jeunes.</p>
       <h2>Fondateur</h2>
-      <p>Antoine Billard, expert en pédagogie active.</p>
+      <p>Antoine Billard</p>
       <h2>Valeurs & Méthodes</h2>
       <ul>
         <li>Cycle de Kolb</li>
@@ -26,7 +26,7 @@
   </main>
 
   <footer>
-    <p>© 2026 Ludus Mentis</p>
+    <p>© 2025 Ludus Mentis</p>
   </footer>
 </body>
 </html>
