--- a/index.html
+++ b/index.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Ludus Mentis - Académie éducative par le jeu vidéo</title>
-  <link rel="stylesheet" href="assets/css/styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Ludus Mentis</title>
+  <link rel="stylesheet" href="assets/css/styles.css" />
 </head>
 <body>
+
   <header>
     <h1>Ludus Mentis</h1>
-    <p>« Apprendre, coopérer, grandir : les soft skills du futur par le jeu vidéo. »</p>
     <nav>
-      <a href="index.html">Accueil</a>
-      <a href="a-propos.html">À propos</a>
-      <a href="programmes.html">Programmes</a>
-      <a href="temoignages.html">Témoignages</a>
-      <a href="inscription.html">Inscription</a>
-      <a href="blog.html">Blog</a>
-      <a href="contact.html">Contact</a>
+      <a href="#">Accueil</a>
+      <a href="#">À propos</a>
+      <a href="#">Stages</a>
+      <a href="#">Contact</a>
     </nav>
   </header>
 
   <main>
     <section>
-      <h2>Présentation</h2>
-      <p>Ludus Mentis est une académie innovante née à Walhain, visant à renforcer les compétences psychosociales des jeunes à travers le jeu vidéo coopératif, selon une méthodologie validée scientifiquement (MEGASKILLS).</p>
-      <a href="programmes.html">Découvrir nos programmes</a>
+      <h2>Apprendre, Jouer, Grandir</h2>
+      <p>
+        Ludus Mentis propose une approche innovante mêlant jeu vidéo, développement personnel et apprentissage coopératif pour les jeunes.
+      </p>
+      <a href="#" class="cta-button">Découvrir nos programmes</a>
     </section>
   </main>
 
   <footer>
-    <p>© 2026 Ludus Mentis | <a href="mentions.html">Mentions légales</a></p>
+    <p>&copy; 2025 Ludus Mentis. Tous droits réservés. | <a href="#">Mentions légales</a></p>
   </footer>
+
 </body>
 </html>
