--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
 
   <header>
-    <h1>Ludus Mentis</h1>
-    <nav>
-      <a href="#">Accueil</a>
-      <a href="#">À propos</a>
-      <a href="#">Stages</a>
-      <a href="#">Contact</a>
-    </nav>
-  </header>
-
+  <img src="assets/images/Ludus_Mentis_Logo_Transparent.png" alt="Logo Ludus Mentis" class="logo" />
+  <h1>Ludus Mentis</h1>
+  <nav>
+    <a href="index.html">Accueil</a>
+    <a href="a-propos.html">À propos</a>
+    <a href="#">Stages</a>
+    <a href="#">Contact</a>
+  </nav>
+</header>
   <main>
     <section>
       <h2>Apprendre, Jouer, Grandir</h2>
