--- a/a-propos.html
+++ b/a-propos.html
@@ -1,32 +1,46 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>À propos - Ludus Mentis</title>
-  <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="stylesheet" href="assets/css/styles.css" />
 </head>
 <body>
+
   <header>
-    <h1>À propos de Ludus Mentis</h1>
+    <img src="assets/images/Ludus_Mentis_Logo_Transparent.png" alt="Logo Ludus Mentis" class="logo" />
+    <h1>Ludus Mentis</h1>
+    <nav>
+      <a href="index.html">Accueil</a>
+      <a href="a-propos.html">À propos</a>
+      <a href="#">Stages</a>
+      <a href="#">Contact</a>
+    </nav>
   </header>
 
   <main>
     <section>
-      <h2>Vision & Histoire</h2>
-      <p>Ludus Mentis répond au besoin de structurer positivement la pratique vidéoludique des jeunes.</p>
-      <h2>Fondateur</h2>
-      <p>Antoine Billard</p>
-      <h2>Valeurs & Méthodes</h2>
+      <h2>Notre vision</h2>
+      <p>
+        Ludus Mentis accompagne les jeunes dans leur développement personnel grâce à une pédagogie innovante basée sur le jeu vidéo coopératif, l’intelligence émotionnelle et la mise en mouvement.
+      </p>
+    </section>
+
+    <section>
+      <h2>Nos valeurs</h2>
       <ul>
-        <li>Cycle de Kolb</li>
-        <li>Méthode SAFE</li>
-        <li>Validation scientifique MEGASKILLS</li>
+        <li>Bienveillance</li>
+        <li>Esprit d’équipe</li>
+        <li>Esprit critique</li>
+        <li>Responsabilité</li>
       </ul>
     </section>
   </main>
 
   <footer>
-    <p>© 2025 Ludus Mentis</p>
+    <p>&copy; 2025 Ludus Mentis. Tous droits réservés. | <a href="#">Mentions légales</a></p>
   </footer>
+
 </body>
 </html>
