--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <nav>
     <a href="index.html">Accueil</a>
     <a href="a-propos.html">À propos</a>
-    <a href="#">Stages</a>
+    <a href="#">Académie</a>
     <a href="#">Contact</a>
   </nav>
 </header>
