--- a/concept.html
+++ b/concept.html
@@ -2,39 +2,39 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Contact – Ludus Mentis</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Le concept – Ludus Mentis</title>
+  <meta name="description" content="Ludus Mentis – académie éducative par le jeu coopératif" />
   <link rel="stylesheet" href="assets/css/styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <!-- Header -->
   <div id="header-container"></div>
 
   <main>
-    <section class="section">
-      <h2>Nous contacter</h2>
-      <p>Pour toute demande d'information ou inscription, contactez-nous via les moyens suivants :</p>
-      <ul>
-        <li>Email : <a href="mailto:ludus.mentis.esport@gmail.com">ludus.mentis.esport@gmail.com</a></li>
-        <li>Téléphone : 0474 25 40 37</li>
-        <li>Adresse : Walhain, Belgique</li>
-      </ul>
-    </section>
+    
+      <section class="piliers">
+        <div class="pilier">
+          <h2>Notre vision</h2>
+          <p>Ludus Mentis transforme le jeu vidéo coopératif en un levier d’apprentissage pour le développement personnel et social des jeunes.</p>
+        </div>
+        <div class="pilier">
+          <h2>Pourquoi le jeu vidéo ?</h2>
+          <p>Parce qu’il fait partie intégrante de la vie des jeunes. Bien encadré, il devient un outil d’éducation puissante, valorisante et inclusive.</p>
+        </div>
+      </section>
+    
   </main>
 
-  <!-- Footer -->
   <div id="footer-container"></div>
 
-  <!-- Inclusion dynamique header/footer -->
   <script>
-    fetch("components/header.html").then(res => res.text()).then(data => {
-      document.getElementById("header-container").innerHTML = data;
-    });
-
-    fetch("components/footer.html").then(res => res.text()).then(data => {
-      document.getElementById("footer-container").innerHTML = data;
-    });
+    fetch('components/header.html')
+      .then(response => response.text())
+      .then(data => document.getElementById('header-container').innerHTML = data);
+    fetch('components/footer.html')
+      .then(response => response.text())
+      .then(data => document.getElementById('footer-container').innerHTML = data);
   </script>
 </body>
 </html>
