--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
   <div class="pilier">
     <h2>📬 Nous contacter</h2>
     <p>Une question ? Une demande d’inscription ? Contactez-nous via ce formulaire ou directement par email.</p>
-    <form action="mailto:ludus.mentis.esport@gmail.com" method="post" enctype="text/plain" class="contact-form">
+    <form action="mailto:info@ludusmentis.com" method="post" enctype="text/plain" class="contact-form">
       <label for="name">Nom :</label><br>
       <input type="text" id="name" name="name" required><br><br>
 
