--- a/index.html
+++ b/index.html
@@ -38,24 +38,53 @@
       </div>
     </section>
 
-    <!-- TEMOIGNAGES (Placeholder) -->
-    <section class="piliers">
-      <div class="pilier">
-        <h2>💬 Témoignages</h2>
-        <p><em>“Mon fils attendait chaque séance avec impatience. Il a retrouvé confiance en lui.”</em><br>– Parent, Walhain</p>
-        <p><em>“On joue ensemble, on parle, on fait des trucs qu’on n’a jamais fait à l’école.”</em><br>– Jeune participant</p>
-      </div>
-    </section>
 
-    <!-- FAQ (Placeholder) -->
-    <section class="piliers">
-      <div class="pilier">
-        <h2>❓ Questions fréquentes</h2>
-        <p><strong>Quels jeux utilisez-vous ?</strong><br>Des jeux coopératifs non violents (Nintendo Switch), adaptés aux jeunes.</p>
-        <p><strong>Est-ce que ça remplace le sport ?</strong><br>Non, c’est une alternative complémentaire pour les jeunes qui ne s’y retrouvent pas.</p>
-        <p><strong>Est-ce que les enfants sont encadrés ?</strong><br>Oui, par des animateurs formés à notre méthode pédagogique.</p>
-      </div>
-    </section>
+ <section class="piliers">
+  <h2 style="text-align:center;">❓ Foire aux questions des parents</h2>
+
+  <div class="pilier">
+    <h3>Le jeu en académie va-t-il augmenter le temps de jeu à la maison ?</h3>
+    <p>Non. Ludus Mentis propose un cadre structurant qui démontre aux jeunes qu’un usage raisonné est possible et même plus plaisant. En apprenant à jouer ensemble, à alterner avec des activités physiques et à discuter du temps passé à l’écran, les jeunes développent une <strong>autorégulation numérique</strong>.</p>
+  </div>
+
+  <div class="pilier">
+    <h3>Comment Ludus Mentis évite-t-il l’addiction ?</h3>
+    <p>L’addiction aux jeux vidéo touche environ <strong>12 % des jeunes belges</strong> (<a href="https://www.bruxelles-j.be/drogues-addictions/ecrans-et-jeux-video-usage-excessif-ou-addiction/" target="_blank">source</a>). Nos ateliers enseignent la gestion du temps d’écran à travers :
+      <ul>
+        <li>des jeux coopératifs non répétitifs</li>
+        <li>des pauses actives, du mouvement</li>
+        <li>des discussions guidées sur la dépendance</li>
+      </ul>
+    </p>
+  </div>
+
+  <div class="pilier">
+    <h3>Faut-il déjà être un gamer ?</h3>
+    <p>Pas du tout. Les modules sont conçus pour <strong>tous profils</strong> : curieux, débutants ou habitués. Les jeux sont accessibles, coopératifs, et ne demandent ni réflexes ni expérience préalable.</p>
+  </div>
+
+  <div class="pilier">
+    <h3>Les écrans, c’est mauvais pour la santé ?</h3>
+    <p>Ce n’est pas l’écran en soi, mais <strong>l’usage passif, solitaire et prolongé</strong> qui pose problème. En Belgique, une majorité d’ados dépassent les <strong>2h/j d’écran</strong> (<a href="https://www.sciensano.be/fr/resultats-de-lenquete-nationale-de-consommation-alimentaire-2022-2023/activite-physique-et-sedentarite-chez-les-adolescents-de-10-a-17-ans/temps" target="_blank">Sciensano</a>). Ludus Mentis intègre :
+      <ul>
+        <li>de l’exergaming (mouvement via jeux vidéo)</li>
+        <li>des discussions sur l’équilibre digital</li>
+        <li>des activités réelles hors écran à chaque séance</li>
+      </ul>
+    </p>
+  </div>
+
+  <div class="pilier">
+    <h3>Pourquoi une académie du jeu vidéo est-elle nécessaire ?</h3>
+    <p>En Belgique, près de <strong>40 % de la population joue aux jeux vidéo</strong>, y compris une majorité de jeunes (<a href="https://vgfb.be/nearly-40-of-the-belgian-population-plays-video-games/" target="_blank">source</a>, <a href="https://www.rtbf.be/article/le-jeu-video-a-la-cote-en-belgique-pres-de-40-de-la-population-y-joueraient-11440222" target="_blank">RTBF</a>). Selon l’<a href="https://www.one.be/public/cest-quoi-lone/nos-campagnes/les-enfants-et-les-ecrans/" target="_blank">ONE</a>, les écrans peuvent être positifs s’ils sont bien encadrés. Ludus Mentis est une <strong>réponse éducative réaliste</strong>.</p>
+  </div>
+
+  <div class="pilier" style="text-align:center;">
+    <a href="https://typeform.com/to/inscription-ludus" target="_blank">
+      <button class="cta-button">📝 Je préinscris mon enfant</button>
+    </a>
+  </div>
+</section>
   </main>
 
   <!-- FOOTER -->
