--- a/index.html
+++ b/index.html
@@ -1,45 +1,76 @@
-<section class="piliers">
-  <h2 style="text-align:center;">❓ Foire aux questions des parents</h2>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Ludus Mentis – Accueil</title>
+  <meta name="description" content="Ludus Mentis est une académie éducative par le jeu vidéo coopératif destinée aux jeunes de 10 à 15 ans." />
+  <link rel="stylesheet" href="assets/css/styles.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+</head>
+<body>
 
-  <div class="pilier">
-    <h3>Le jeu en académie va-t-il augmenter le temps de jeu à la maison ?</h3>
-    <p>Non. Ludus Mentis propose un cadre structurant qui démontre aux jeunes qu’un usage raisonné est possible et même plus plaisant. En apprenant à jouer ensemble, à alterner avec des activités physiques et à discuter du temps passé à l’écran, les jeunes développent une <strong>autorégulation numérique</strong>.</p>
-  </div>
+  <!-- HEADER -->
+  <div id="header-container"></div>
 
-  <div class="pilier">
-    <h3>Comment Ludus Mentis évite-t-il l’addiction ?</h3>
-    <p>L’addiction aux jeux vidéo touche environ <strong>12 % des jeunes belges</strong> (<a href="https://www.bruxelles-j.be/drogues-addictions/ecrans-et-jeux-video-usage-excessif-ou-addiction/" target="_blank">source</a>).</p>
-    <ul>
-      <li>Des jeux coopératifs non répétitifs</li>
-      <li>Des pauses actives et du mouvement</li>
-      <li>Des discussions guidées sur l’équilibre numérique</li>
-    </ul>
-  </div>
+  <main>
+    <!-- HERO -->
+    <section class="hero">
+      <h1>L'académie du jeu vidéo coopératif</h1>
+      <p>Développer les compétences sociales, émotionnelles et cognitives des jeunes à travers une pratique encadrée et bienveillante du jeu vidéo.</p>
+      <a href="academie.html"><button class="cta-button">Découvrir l'académie</button></a>
+    </section>
 
-  <div class="pilier">
-    <h3>Faut-il déjà être un gamer ?</h3>
-    <p>Pas du tout. Les modules sont conçus pour <strong>tous profils</strong> : curieux, débutants ou habitués. Les jeux sont accessibles, coopératifs, et ne demandent ni réflexes ni expérience préalable.</p>
-  </div>
+    <!-- PILIERS -->
+    <section class="piliers">
+      <div class="pilier">
+        <h2>🎮 Jeu coopératif</h2>
+        <p>Des jeux vidéo non violents, centrés sur la collaboration et l'écoute. Le numérique devient un outil d’apprentissage actif.</p>
+      </div>
+      <div class="pilier">
+        <h2>🧠 Développement personnel</h2>
+        <p>Communication, confiance en soi, gestion du stress... Autant de compétences cultivées à chaque séance.</p>
+      </div>
+      <div class="pilier">
+        <h2>👥 Encadrement bienveillant</h2>
+        <p>Facilitateurs formés, approche structurée et accompagnement non thérapeutique, mais profondément humain.</p>
+      </div>
+    </section>
 
-  <div class="pilier">
-    <h3>Les écrans, c’est mauvais pour la santé ?</h3>
-    <p>Ce n’est pas l’écran en soi, mais <strong>l’usage passif, solitaire et prolongé</strong> qui pose problème. En Belgique, une majorité d’ados dépassent les <strong>2h/j d’écran</strong> (<a href="https://www.sciensano.be/fr/resultats-de-lenquete-nationale-de-consommation-alimentaire-2022-2023/activite-physique-et-sedentarite-chez-les-adolescents-de-10-a-17-ans/temps" target="_blank">Sciensano</a>).</p>
-    <ul>
-      <li>Exergaming (activité physique par le jeu)</li>
-      <li>Rituels de pause réguliers</li>
-      <li>Activités hors écran à chaque session</li>
-    </ul>
-  </div>
+    <!-- FAQ -->
+    <section class="piliers">
+      <h2 style="text-align:center;">❓ Foire aux questions des parents</h2>
 
-  <div class="pilier">
-    <h3>Pourquoi une académie du jeu vidéo est-elle nécessaire ?</h3>
-    <p>En Belgique, près de <strong>40 % de la population joue aux jeux vidéo</strong> (<a href="https://vgfb.be/nearly-40-of-the-belgian-population-plays-video-games/" target="_blank">source</a>, <a href="https://www.rtbf.be/article/le-jeu-video-a-la-cote-en-belgique-pres-de-40-de-la-population-y-joueraient-11440222" target="_blank">RTBF</a>).</p>
-    <p>Selon l’<a href="https://www.one.be/public/cest-quoi-lone/nos-campagnes/les-enfants-et-les-ecrans/" target="_blank">ONE</a>, les écrans peuvent être positifs s’ils sont bien encadrés. Ludus Mentis propose une <strong>réponse éducative et préventive</strong>.</p>
-  </div>
+      <div class="pilier">
+        <h3>Le jeu en académie va-t-il augmenter le temps de jeu à la maison ?</h3>
+        <p>Non. Ludus Mentis propose un cadre structurant qui démontre aux jeunes qu’un usage raisonné est possible et même plus plaisant. En apprenant à jouer ensemble, à alterner avec des activités physiques et à discuter du temps passé à l’écran, les jeunes développent une <strong>autorégulation numérique</strong>.</p>
+      </div>
 
-  <div class="pilier" style="text-align:center; margin-top: 2rem;">
-    <a href="https://typeform.com/to/inscription-ludus" target="_blank">
-      <button class="cta-button">📝 Je préinscris mon enfant</button>
-    </a>
-  </div>
-</section>
+      <div class="pilier">
+        <h3>Comment Ludus Mentis évite-t-il l’addiction ?</h3>
+        <p>L’addiction aux jeux vidéo touche environ <strong>12 % des jeunes belges</strong> (<a href="https://www.bruxelles-j.be/drogues-addictions/ecrans-et-jeux-video-usage-excessif-ou-addiction/" target="_blank">source</a>).</p>
+        <ul>
+          <li>Des jeux coopératifs non répétitifs</li>
+          <li>Des pauses actives et du mouvement</li>
+          <li>Des discussions guidées sur l’équilibre numérique</li>
+        </ul>
+      </div>
+
+      <div class="pilier">
+        <h3>Faut-il déjà être un gamer ?</h3>
+        <p>Pas du tout. Les modules sont conçus pour <strong>tous profils</strong> : curieux, débutants ou habitués. Les jeux sont accessibles, coopératifs, et ne demandent ni réflexes ni expérience préalable.</p>
+      </div>
+
+      <div class="pilier">
+        <h3>Les écrans, c’est mauvais pour la santé ?</h3>
+        <p>Ce n’est pas l’écran en soi, mais <strong>l’usage passif, solitaire et prolongé</strong> qui pose problème. En Belgique, une majorité d’ados dépassent les <strong>2h/j d’écran</strong> (<a href="https://www.sciensano.be/fr/resultats-de-lenquete-nationale-de-consommation-alimentaire-2022-2023/activite-physique-et-sedentarite-chez-les-adolescents-de-10-a-17-ans/temps" target="_blank">Sciensano</a>).</p>
+        <ul>
+          <li>Exergaming (activité physique par le jeu)</li>
+          <li>Rituels de pause réguliers</li>
+          <li>Activités hors écran à chaque session</li>
+        </ul>
+      </div>
+
+      <div class="pilier">
+        <h3>Pourquoi une académie du jeu vidéo est-elle nécessaire ?</h3>
+        <p>En Belgique, près de <strong>40 % de la population joue aux jeux vidéo</strong> (<a href="https://vgfb.be/nearly-40-of-the-belgian-population-plays-video-games/" target="_blank">source</a>, <a href="https://www.rtbf.be/article/le-jeu-video-a-la-cote-en-belgique-pres-de-40-de-la-population-y-joueraient-11440222" target="_blank">RTBF</a>).</p>
