--- a/index.html
+++ b/index.html
@@ -37,9 +37,18 @@
       </div>
     </section>
 
+    <!-- TEMOIGNAGES -->
+    <section class="piliers">
+      <div class="pilier">
+        <h2>💬 Témoignages</h2>
+        <p><em>“Mon fils attendait chaque séance avec impatience. Il a retrouvé confiance en lui.”</em><br>– Parent, Walhain</p>
+        <p><em>“On joue ensemble, on parle, on fait des trucs qu’on n’a jamais fait à l’école.”</em><br>– Jeune participant</p>
+      </div>
+    </section>
+
     <!-- FAQ -->
     <section class="piliers">
-      <h2 style="text-align:center;">❓ Foire aux questions des parents</h2>
+      <h2>❓ Foire aux questions</h2>
 
       <div class="pilier">
         <h3>Le jeu en académie va-t-il augmenter le temps de jeu à la maison ?</h3>
@@ -48,12 +57,12 @@
 
       <div class="pilier">
         <h3>Comment Ludus Mentis évite-t-il l’addiction ?</h3>
-        <p>L’addiction aux jeux vidéo touche environ <strong>12 % des jeunes belges</strong> (<a href="https://www.bruxelles-j.be/drogues-addictions/ecrans-et-jeux-video-usage-excessif-ou-addiction/" target="_blank">source</a>).</p>
+        <p>L’addiction aux jeux vidéo touche environ <strong>12 % des jeunes belges</strong> selon des estimations (<a href="https://www.bruxelles-j.be/drogues-addictions/ecrans-et-jeux-video-usage-excessif-ou-addiction/" target="_blank">Bruxelles-J</a>). Nos ateliers enseignent la gestion du temps d’écran à travers :
         <ul>
-          <li>Des jeux coopératifs non répétitifs</li>
-          <li>Des pauses actives et du mouvement</li>
-          <li>Des discussions guidées sur l’équilibre numérique</li>
-        </ul>
+          <li>des jeux coopératifs non répétitifs</li>
+          <li>des pauses actives, du mouvement</li>
+          <li>des discussions guidées sur la dépendance</li>
+        </ul></p>
       </div>
 
       <div class="pilier">
@@ -63,14 +72,32 @@
 
       <div class="pilier">
         <h3>Les écrans, c’est mauvais pour la santé ?</h3>
-        <p>Ce n’est pas l’écran en soi, mais <strong>l’usage passif, solitaire et prolongé</strong> qui pose problème. En Belgique, une majorité d’ados dépassent les <strong>2h/j d’écran</strong> (<a href="https://www.sciensano.be/fr/resultats-de-lenquete-nationale-de-consommation-alimentaire-2022-2023/activite-physique-et-sedentarite-chez-les-adolescents-de-10-a-17-ans/temps" target="_blank">Sciensano</a>).</p>
+        <p>Ce n’est pas l’écran en soi, mais <strong>l’usage passif, solitaire et prolongé</strong> qui pose problème. En Belgique, selon Sciensano, <strong>une majorité d’ados dépassent les 2h/j d’écran</strong> (<a href="https://www.sciensano.be/fr/resultats-de-lenquete-nationale-de-consommation-alimentaire-2022-2023/activite-physique-et-sedentarite-chez-les-adolescents-de-10-a-17-ans/temps" target="_blank">Sciensano 2023</a>). Ludus Mentis intègre :
         <ul>
-          <li>Exergaming (activité physique par le jeu)</li>
-          <li>Rituels de pause réguliers</li>
-          <li>Activités hors écran à chaque session</li>
-        </ul>
+          <li>de l’exergaming (mouvement via jeux vidéo)</li>
+          <li>des discussions sur l’équilibre digital</li>
+          <li>des activités réelles hors écran à chaque séance</li>
+        </ul></p>
       </div>
 
       <div class="pilier">
         <h3>Pourquoi une académie du jeu vidéo est-elle nécessaire ?</h3>
-        <p>En Belgique, près de <strong>40 % de la population joue aux jeux vidéo</strong> (<a href="https://vgfb.be/nearly-40-of-the-belgian-population-plays-video-games/" target="_blank">source</a>, <a href="https://www.rtbf.be/article/le-jeu-video-a-la-cote-en-belgique-pres-de-40-de-la-population-y-joueraient-11440222" target="_blank">RTBF</a>).</p>
+        <p>En Belgique, <strong>près de 40 % de la population joue aux jeux vidéo</strong>, y compris une majorité de jeunes (<a href="https://vgfb.be/nearly-40-of-the-belgian-population-plays-video-games/" target="_blank">VGFB 2023</a>, <a href="https://www.rtbf.be/article/le-jeu-video-a-la-cote-en-belgique-pres-de-40-de-la-population-y-joueraient-11440222" target="_blank">RTBF</a>).</p>
+        <p>Selon l’<a href="https://www.one.be/public/cest-quoi-lone/nos-campagnes/les-enfants-et-les-ecrans/" target="_blank">ONE</a>, les écrans peuvent être positifs si bien encadrés. Ludus Mentis est une <strong>réponse éducative réaliste</strong> à une pratique déjà présente et souvent mal comprise.</p>
+      </div>
+    </section>
+  </main>
+
+  <!-- FOOTER -->
+  <div id="footer-container"></div>
+
+  <script>
+    fetch('components/header.html')
+      .then(response => response.text())
+      .then(data => document.getElementById('header-container').innerHTML = data);
+    fetch('components/footer.html')
+      .then(response => response.text())
+      .then(data => document.getElementById('footer-container').innerHTML = data);
+  </script>
+</body>
+</html>
