--- a/index.html
+++ b/index.html
@@ -78,6 +78,13 @@
         <p>Selon l’<a href="https://www.one.be/public/cest-quoi-lone/nos-campagnes/les-enfants-et-les-ecrans/" target="_blank">ONE</a>, les écrans peuvent être positifs si bien encadrés. Ludus Mentis est une <strong>réponse éducative réaliste</strong> à une pratique déjà présente et souvent mal comprise.</p>
       </div>
     </section>
+
+    <div class="pilier" style="text-align:center;">
+  <a href="https://typeform.com/to/inscription-ludus" target="_blank">
+    <button class="cta-button">📝 Je préinscris mon enfant</button>
+  </a>
+      
+</div>
   </main>
 
   <!-- FOOTER -->
